--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-ladies-complete-guide-to-crochet-fancy-knitting-and-needlework_73303
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 73303-h/images/cover.jpg
 creator:
   author:
     agent_name: Stephens, Ann S. (Ann Sophia)
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/3257
     wikipedia: https://en.wikipedia.org/wiki/Ann_S._Stephens
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/73303#The-ladies-complete-guide-to-crochet-fancy-knitting-and-needlework
 gutenberg_issued: '2024-03-31'
 gutenberg_type: Text
 identifiers:
